--- a/app/translations/messages.en.xlf
+++ b/app/translations/messages.en.xlf
@@ -226,6 +226,52 @@
       </trans-unit>
 
 
+      <trans-unit id="title.main_index">
+        <source>title.main_index</source>
+        <target>Home</target>
+      </trans-unit>
+
+
+<trans-unit id="title.welcome">
+    <source>title.welcome</source>
+    <target>Welcome!</target>
+</trans-unit>
+
+
+
+      <trans-unit id="title.login">
+        <source>title.login</source>
+        <target>Log in</target>
+      </trans-unit>
+      <trans-unit id="login.please_sign_in">
+        <source>login.please_sign_in</source>
+        <target>Please sign in</target>
+      </trans-unit>
+      <trans-unit id="label.email">
+        <source>label.email</source>
+        <target>Email</target>
+      </trans-unit>
+      <trans-unit id="label.password">
+        <source>label.password</source>
+        <target>Password</target>
+      </trans-unit>
+      <trans-unit id="login.remember_me">
+        <source>login.remember_me</source>
+        <target>Remember me</target>
+      </trans-unit>
+      <trans-unit id="login.logged_in_as">
+        <source>login.logged_in_as</source>
+        <target>You are logged in as %username%</target>
+      </trans-unit>
+      <trans-unit id="action.logout">
+        <source>action.logout</source>
+        <target>Logout</target>
+      </trans-unit>
+      <trans-unit id="action.login">
+        <source>action.login</source>
+        <target>Log in</target>
+      </trans-unit>
+
     </body>
   </file>
 </xliff>
