--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -79,10 +79,6 @@
         <source>title.event_details</source>
         <target>Szczegóły wydarzenia #%id%</target>
       </trans-unit>
-      <trans-unit id="title.event_list">
-        <source>title.event_list</source>
-        <target>Lista wydarzeń</target>
-      </trans-unit>
       <trans-unit id="title.event_edit">
         <source>title.event_edit</source>
         <target>Edytuj wydarzenie #%id%</target>
@@ -107,13 +103,61 @@
         <source>title.contact_edit</source>
         <target>Edytuj kontakt #%id%</target>
       </trans-unit>
-      <trans-unit id="title.contact_list">
-        <source>title.contact_list</source>
-        <target>Lista kontaktów</target>
-      </trans-unit>
       <trans-unit id="title.contact_details">
         <source>title.contact_details</source>
         <target>Szczegóły kontaktu #%id%</target>
+      </trans-unit>
+      <trans-unit id="title.category_create">
+        <source>title.category_create</source>
+        <target>Utwórz Kategorię</target>
+      </trans-unit>
+      <trans-unit id="title.category_delete">
+        <source>title.category_delete</source>
+        <target>Usuń Kategorię #%id%</target>
+      </trans-unit>
+      <trans-unit id="title.category_edit">
+        <source>title.category_edit</source>
+        <target>Edytuj Kategorię #%id%</target>
+      </trans-unit>
+      <trans-unit id="title.category_details">
+        <source>title.category_details</source>
+        <target>Szczegóły Kategorii #%id%</target>
+      </trans-unit>
+      <trans-unit id="message.updated_successfully">
+        <source>message.updated_successfully</source>
+        <target>Zaktualizowano pomyślnie.</target>
+      </trans-unit>
+      <trans-unit id="message.deleted_successfully">
+        <source>message.deleted_successfully</source>
+        <target>Usunięto pomyślnie.</target>
+      </trans-unit>
+      <trans-unit id="message.category_contains_tasks">
+        <source>message.category_contains_events</source>
+        <target>Ta kategoria zawiera wydarzenia i nie może zostać bezpośrednio usunięta.</target>
+      </trans-unit>
+      <trans-unit id="message.created_successfully">
+        <source>message.created_successfully</source>
+        <target>Utworzono pomyślnie.</target>
+      </trans-unit>
+      <trans-unit id="label.none">
+        <source>label.none</source>
+        <target>Brak</target>
+      </trans-unit>
+      <trans-unit id="message.edited_successfully">
+        <source>message.edited_successfully</source>
+        <target>Edytowano pomyślnie.</target>
+      </trans-unit>
+      <trans-unit id="action.filter">
+        <source>action.filter</source>
+        <target>Filtruj po datach</target>
+      </trans-unit>
+      <trans-unit id="event.date.year_exceed">
+        <source>event.date.year_exceed</source>
+        <target>Rok nie może być większy niż 2099.</target>
+      </trans-unit>
+      <trans-unit id="title.main_index">
+        <source>title.main_index</source>
+        <target>Strona główna</target>
       </trans-unit>
       <trans-unit id="message.welcome">
         <source>message.welcome</source>
@@ -159,128 +203,18 @@
         <source>category_index</source>
         <target>Indeks Kategorii</target>
       </trans-unit>
-
-      <trans-unit id="title.category_create">
-        <source>title.category_create</source>
-        <target>Utwórz Kategorię</target>
+      <trans-unit id="login.please_sign_in">
+        <source>login.please_sign_in</source>
+        <target>Proszę się zalogować</target>
       </trans-unit>
-      <trans-unit id="title.category_delete">
-        <source>title.category_delete</source>
-        <target>Usuń Kategorię #%id%</target>
+      <trans-unit id="label.email">
+        <source>label.email</source>
+        <target>E-mail</target>
       </trans-unit>
-      <trans-unit id="title.category_edit">
-        <source>title.category_edit</source>
-        <target>Edytuj Kategorię #%id%</target>
+      <trans-unit id="label.password">
+        <source>label.password</source>
+        <target>Hasło</target>
       </trans-unit>
-      <trans-unit id="title.category_list">
-        <source>title.category_list</source>
-        <target>Lista Kategorii</target>
-      </trans-unit>
-      <trans-unit id="title.category_details">
-        <source>title.category_details</source>
-        <target>Szczegóły Kategorii #%id%</target>
-      </trans-unit>
-
-      <trans-unit id="message.updated_successfully">
-        <source>message.updated_successfully</source>
-        <target>Zaktualizowano pomyślnie.</target>
-      </trans-unit>
-
-      <trans-unit id="message.deleted_successfully">
-        <source>message.deleted_successfully</source>
-        <target>Usunięto pomyślnie.</target>
-      </trans-unit>
-
-      <trans-unit id="message.category_contains_tasks">
-        <source>message.category_contains_tasks</source>
-        <target>Ta kategoria zawiera zadania i nie może zostać bezpośrednio usunięta.</target>
-      </trans-unit>
-
-      <trans-unit id="message.created_successfully">
-        <source>message.created_successfully</source>
-        <target>Utworzono pomyślnie.</target>
-      </trans-unit>
-
-      <trans-unit id="label.none">
-        <source>label.none</source>
-        <target>Brak</target>
-      </trans-unit>
-
-      <trans-unit id="message.edited_successfully">
-        <source>message.edited_successfully</source>
-        <target>Edytowano pomyślnie.</target>
-      </trans-unit>
-
-           <trans-unit id="action.filter">
-              <source>action.filter</source>
-              <target>Filtruj po datach</target>
-      </trans-unit>
-
-
-       <trans-unit id="event.date.year_exceed">
-          <source>event.date.year_exceed</source>
-          <target>Rok nie może być większy niż 2099.</target>
-      </trans-unit>
-
-            <trans-unit id="title.main_index">
-              <source>title.main_index</source>
-              <target>Strona główna</target>
-            </trans-unit>
-
-            <trans-unit id="title.event_list">
-              <source>title.event_list</source>
-              <target>Wydarzenia</target>
-            </trans-unit>
-
-            <trans-unit id="title.contact_list">
-              <source>title.contact_list</source>
-              <target>Kontakty</target>
-            </trans-unit>
-
-            <trans-unit id="title.category_list">
-              <source>title.category_list</source>
-              <target>Kategorie</target>
-
-
-            <trans-unit id="title.welcome">
-                <source>title.welcome</source>
-                <target>Witaj!</target>
-            </trans-unit>
-
-                  <trans-unit id="title.login">
-                    <source>title.login</source>
-                    <target>Zaloguj się</target>
-                  </trans-unit>
-                  <trans-unit id="login.please_sign_in">
-                    <source>login.please_sign_in</source>
-                    <target>Proszę się zalogować</target>
-                  </trans-unit>
-                  <trans-unit id="label.email">
-                    <source>label.email</source>
-                    <target>Email</target>
-                  </trans-unit>
-                  <trans-unit id="label.password">
-                    <source>label.password</source>
-                    <target>Hasło</target>
-                  </trans-unit>
-                  <trans-unit id="login.remember_me">
-                    <source>login.remember_me</source>
-                    <target>Zapamiętaj mnie</target>
-                  </trans-unit>
-                  <trans-unit id="login.logged_in_as">
-                    <source>login.logged_in_as</source>
-                    <target>Jesteś zalogowany jako %username%</target>
-                  </trans-unit>
-                  <trans-unit id="action.logout">
-                    <source>action.logout</source>
-                    <target>Wyloguj się</target>
-                  </trans-unit>
-                  <trans-unit id="action.login">
-                    <source>action.login</source>
-                    <target>Zaloguj się</target>
-                  </trans-unit>
-
-
     </body>
   </file>
 </xliff>
